# Geodesic

./: CMakeLists.txt  Readme.md  imgui.ini  makefile  motor
src/: CMakeLists.txt  main.cpp
src/core/: App.cpp  App.hpp  GLContext.cpp  GLContext.hpp  Input.cpp  Input.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/render/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/render/gui/: Gui.cpp  Gui.hpp
